--- a/StandByMe/Main.storyboard
+++ b/StandByMe/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aMv-wa-ZhB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="aMv-wa-ZhB">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -29,7 +29,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oSV-IZ-nPd">
                                             <rect key="frame" x="76" y="8" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gZo-51-KdE">
@@ -42,7 +42,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q0B-VM-z5c">
                                             <rect key="frame" x="76" y="54" width="42" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -95,25 +95,6 @@
             </objects>
             <point key="canvasLocation" x="1490" y="-1770"/>
         </scene>
-        <!--公告牌-->
-        <scene sceneID="WNK-0X-oHM">
-            <objects>
-                <viewController id="Pbq-J7-8fd" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="lUw-fo-iZf"/>
-                        <viewControllerLayoutGuide type="bottom" id="PnO-q8-680"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="m3l-bm-tQx">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.74509805439999999" green="0.90196084980000002" blue="0.94901967050000002" alpha="1" colorSpace="deviceRGB"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="公告牌" id="gik-P3-I8t"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WWv-dA-8Ve" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1490" y="-788"/>
-        </scene>
         <!--通讯录-->
         <scene sceneID="jiq-iE-Ebe">
             <objects>
@@ -163,7 +144,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="Pbq-J7-8fd" kind="relationship" relationship="viewControllers" id="OPI-06-GSC"/>
+                        <segue destination="ftD-F8-891" kind="relationship" relationship="viewControllers" id="OPI-06-GSC"/>
                         <segue destination="WN6-bw-dUb" kind="relationship" relationship="viewControllers" id="ZEs-tx-7o6"/>
                         <segue destination="UO4-HQ-c5e" kind="relationship" relationship="viewControllers" id="3zD-no-0MN"/>
                         <segue destination="6g6-LP-G5I" kind="relationship" relationship="viewControllers" id="zdp-Ac-OUz"/>
@@ -172,6 +153,52 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I8J-Ny-kxZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-48" y="466"/>
+        </scene>
+        <!--公告牌-->
+        <scene sceneID="m8Q-NZ-ywP">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ftD-F8-891" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="公告牌" id="gik-P3-I8t"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XJ4-Yd-9TK">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AMN-QR-Tef" kind="relationship" relationship="rootViewController" id="jSC-zT-S8F"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qt9-lN-P0o" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1490" y="-788"/>
+        </scene>
+        <!--Platform Table View Controller-->
+        <scene sceneID="W0j-y4-8aS">
+            <objects>
+                <tableViewController id="AMN-QR-Tef" customClass="PlatformTableViewController" customModule="StandByMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ssD-xq-QxU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlatformCell" id="rDS-Bl-JUz" customClass="PlatformTableViewCell" customModule="StandByMe" customModuleProvider="target">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rDS-Bl-JUz" id="XGw-yq-tIY">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="AMN-QR-Tef" id="1Qu-eZ-HEL"/>
+                            <outlet property="delegate" destination="AMN-QR-Tef" id="4IC-0l-v2C"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="K5W-O5-PaR"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="89g-BV-qbu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2220" y="-800"/>
         </scene>
     </scenes>
 </document>
